<resources>
    <string name="app_name">Build it Bigger</string>
    <string name="instructions">Press the button for a delicious joke!</string>
    <string name="button_text">Tell Joke</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="GCPPrjectID">builditbiggernano</string>
    <string name="title_activity_license">License</string>

    <string name="license_title">Licenses</string>

    <string name="androidIconics_title">Android-Iconics</string>
    <string name="androidIconics_link">https://github.com/mikepenz/Android-Iconics</string>
    <string name="androidIconics_license">Copyright &#169; 2016 Mike Penz\n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n<a href='http://www.apache.org/licenses/LICENSE-2.0'>http://www.apache.org/licenses/LICENSE-2.0</a>\n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>

    <string name="butterKnife_title">Butter Knife</string>
    <string name="butterKnife_link">http://jakewharton.github.io/butterknife/</string>
    <string name="butterKnife_license">Copyright &#169; 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n<a href='http://www.apache.org/licenses/LICENSE-2.0'>http://www.apache.org/licenses/LICENSE-2.0</a>\n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>

</resources>
