<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.gradle.builditbigger.LicenseActivity"
    tools:showIn="@layout/activity_license">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/androidIconicsWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/androidIconicsTitle"
                style="@style/licenseTitle"
                android:text="@string/androidIconics_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/androidIconicsLink"
                style="@style/licenseLink"
                android:text="@string/androidIconics_link"
                app:layout_constraintTop_toBottomOf="@id/androidIconicsTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/androidIconicsLicense"
                style="@style/licenseLicense"
                android:text="@string/androidIconics_license"
                app:layout_constraintTop_toBottomOf="@id/androidIconicsLink"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <View
            style="@style/licenseDivider"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/butterKnifeWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/butterKnifeTitle"
                style="@style/licenseTitle"
                android:text="@string/butterKnife_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/butterKnifeLink"
                style="@style/licenseLink"
                android:text="@string/butterKnife_link"
                app:layout_constraintTop_toBottomOf="@id/butterKnifeTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/butterKnifeLicense"
                style="@style/licenseLicense"
                android:text="@string/butterKnife_license"
                app:layout_constraintTop_toBottomOf="@id/butterKnifeLink"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <View
            style="@style/licenseDivider"/>

    </LinearLayout>

</ScrollView>
